--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "cypress-test",
+  "version": "1.0.0",
+  "description": "first-cypress-test",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "ReactToster",
+  "license": "ISC",
   "devDependencies": {
     "cypress": "^12.9.0"
   }
